<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.buddman1208.ecowell.ui.productselect.ProductSelectViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.productselect.ProductSelectActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCommonBlack"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/ecowell_product_select"
            android:textColor="#FFF"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_ecowell"
            app:layout_constraintBottom_toTopOf="@id/btnLuWellSelect"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/btnLuWellSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="@{vm::onTypeSelected}"
            android:src="@{vm.luWellAvailable ? @drawable/btn_select_luwell_enable : @drawable/btn_select_luwell_disable}"
            app:layout_constraintBottom_toTopOf="@id/btnConnection"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnIonSelect"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <ImageView
            android:id="@+id/btnIonSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{vm::onTypeSelected}"
            android:src="@drawable/btn_select_ionstone_disable"
            app:layout_constraintLeft_toRightOf="@id/btnLuWellSelect"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnLuWellSelect" />

        <RelativeLayout
            android:id="@+id/btnConnection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorEcoWell"
            android:onClick="@{vm::onBluetoothButtonClicked}"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/btnLuWellSelect"
            app:layout_constraintRight_toRightOf="@id/btnIonSelect"
            app:layout_constraintTop_toBottomOf="@id/btnLuWellSelect">

            <TextView
                android:id="@+id/btnBluetoothConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/ic_bluetooth_svgrepo_com"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/btn_bluetooth_connect"
                android:text="@string/bluetooth_connection"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/language"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/ivKorean"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/ivKorean"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="25dp"
            android:onClick="@{() -> vm.onKoreanSelected()}"
            android:src="@{vm.isKorean() ? @drawable/ic_korean_selected : @drawable/ic_korean_not_selected}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ivEnglish" />

        <ImageView
            android:id="@+id/ivEnglish"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:onClick="@{() -> vm.onEnglishSelected()}"
            android:src="@{vm.isKorean() ? @drawable/ic_english_not_selected : @drawable/ic_english_selected}"
            app:layout_constraintBottom_toBottomOf="@id/ivKorean"
            app:layout_constraintLeft_toRightOf="@id/ivKorean"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>