<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.buddman1208.ecowell.ui.main.MainViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCommonBlack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/toolbar_title"
                android:textColor="#FFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarContainer">

            <!-- Background Image -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pic_luwell_background" />

            <!-- Top Icons -->

            <ImageView
                android:id="@+id/ivGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="@{() -> vm.onTutorialClick()}"
                android:padding="16dp"
                android:src="@drawable/ic_guide_selector"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBluetooth"
                style="@style/InfoTextWithIcons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_bluetooth_on"
                android:text="Bluetooth"
                app:layout_constraintBottom_toBottomOf="@id/ivGuide"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivGuide" />

            <TextView
                android:id="@+id/tvBattery"
                style="@style/InfoTextWithIcons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="Battery"
                app:iconOnRight="@{vm.batteryImg}"
                app:layout_constraintBottom_toBottomOf="@id/ivGuide"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivGuide" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/ivHomepage"
                app:layout_constraintTop_toBottomOf="@id/ivGuide">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.15" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.85" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.15" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.85" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@{vm.isRunning() ? @drawable/pic_timer_playing : @drawable/pic_timer_stopping}"
                        app:layout_constraintBottom_toBottomOf="@id/glBottom"
                        app:layout_constraintDimensionRatio="h, 1"
                        app:layout_constraintLeft_toLeftOf="@id/glLeft"
                        app:layout_constraintRight_toRightOf="@id/glRight"
                        app:layout_constraintTop_toTopOf="@id/glTop" />

                    <com.buddman1208.ecowell.view.RoundProgressView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="@id/glBottom"
                        app:layout_constraintDimensionRatio="h, 1"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="@id/glLeft"
                        app:layout_constraintRight_toRightOf="@id/glRight"
                        app:layout_constraintTop_toTopOf="@id/glTop"
                        app:progress="@{vm.progress}"
                        app:strokeWidth="10dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvMode"
                        style="@style/MajorText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="MODE"
                        app:layout_constraintBottom_toTopOf="@id/optionContainer"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <LinearLayout
                        android:id="@+id/optionContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="26dp"
                        android:paddingRight="26dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvMode">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="@{() -> vm.onLedClick()}">


                            <ImageView
                                android:id="@+id/ivLed"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:padding="4dp"
                                app:imageRes="@{vm.ledImg}"
                                app:layout_constraintBottom_toTopOf="@id/tvLed"
                                app:layout_constraintDimensionRatio="w, 1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tvLed"
                                style="@style/CommonText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/led"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/ivLed" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="@{() -> vm.onMicrocurrentClick()}">


                            <ImageView
                                android:id="@+id/ivMicro"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:padding="4dp"
                                app:imageRes="@{vm.microImg}"
                                app:layout_constraintBottom_toTopOf="@id/tvMicro"
                                app:layout_constraintDimensionRatio="w, 1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tvMicro"
                                style="@style/CommonText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/microcurrent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/ivMicro" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="@{() -> vm.onGalvanicClick()}">


                            <ImageView
                                android:id="@+id/ivGalvanic"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:padding="4dp"
                                app:imageRes="@{vm.galvanicImg}"
                                app:layout_constraintBottom_toTopOf="@id/tvGalvanic"
                                app:layout_constraintDimensionRatio="w, 1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tvGalvanic"
                                style="@style/CommonText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/led"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/ivGalvanic" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ivHomepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.onHomepageClick()}"
                android:padding="20dp"
                android:src="@drawable/ic_homepage_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/ivSetting"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:onClick="@{() -> vm.onSettingClick()}"
                android:padding="20dp"
                android:src="@drawable/ic_setting_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{() -> vm.onTutorialClick()}"
            android:scaleType="fitXY"
            android:src="@drawable/tutorial"
            android:visibility="@{vm.isShowTutorial() ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>